--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   </head>
   <body class="">
     <h1 class="text-3xl font-bold text-center mt-5 text-black">Cart System</h1>
-    <section class="bg-gray-900 m-5 p-10 ">
+    <section class="bg-gray-900 m-5 p-10 rounded-2xl">
       <h2 class="text-3xl font-bold p-4 text-white text-center">Products</h2>
       <article
         class="grid lg:grid-cols-6 md:grid-cols-3 gap-5 rounded-lg justify-center"
       >
         <div
-          class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 " 
+          class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 rounded-3xl " 
         >
           <a href="#">
             <img
