--- a/index.html
+++ b/index.html
@@ -7,159 +7,138 @@
     <title>Cart System</title>
   </head>
 
-  <body class="bg-gray-200">
+  <body class="bg-gray-200 p-5 m-10 rounded-2xl shadow-sm h-fit">
     <h1 class="text-3xl font-bold text-center mt-5 text-black">Cart System</h1>
 
-    <main class="grid grid-cols-1 md:grid-cols-3 gap-5 m-5">
-
+    <main class="grid grid-cols-1 md:grid-cols-3 gap-5 m-5" id="main">
       <section class="md:col-span-2 bg-gray-900 p-10 rounded-2xl">
         <h2 class="text-3xl font-bold p-4 text-white text-center">Products</h2>
 
-        <article class="grid lg:grid-cols-3 md:grid-cols-2 gap-5 rounded-lg justify-center">
-
+        <article
+          class="grid lg:grid-cols-3 md:grid-cols-2 gap-5 rounded-lg justify-center"
+        >
           <!-- Product Card 1 -->
-          <div
-            class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700
-            transform transition duration-300 hover:scale-105 hover:shadow-xl cursor-pointer"
-          >
+          <div class="card">
             <a href="#">
-              <img class="p-8 rounded-t-lg transition duration-300 hover:scale-110"
-                src="./src/assets/imgs/moby.webp" alt="product image" />
+              <img
+                class="img-design"
+                src="./src/assets/imgs/moby.webp"
+                alt="product image"
+              />
             </a>
             <div class="px-5 pb-5">
-              <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white">Moby</h5>
+              <h5 class="item_name">Moby</h5>
               <div class="flex items-center justify-between mt-2">
-                <span class="text-3xl font-bold text-gray-900 dark:text-white">₱12</span>
-                <button
-                  class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none 
-                  focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center 
-                  dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                >Add to cart</button>
+                <span class="price">₱12</span>
+                <button class="button">Add to cart</button>
               </div>
             </div>
           </div>
 
           <!-- Product Card 2 -->
-          <div
-            class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700
-            transform transition duration-300 hover:scale-105 hover:shadow-xl cursor-pointer"
-          >
+          <div class="card">
             <a href="#">
-              <img class="p-8 rounded-t-lg transition duration-300 hover:scale-110"
-                src="./src/assets/imgs/patata.png" alt="product image" />
+              <img
+                class="img-design"
+                src="./src/assets/imgs/patata.png"
+                alt="product image"
+              />
             </a>
             <div class="px-5 pb-5">
-              <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white">V-Cut</h5>
+              <h5 class="item_name">V-Cut</h5>
               <div class="flex items-center justify-between mt-2">
-                <span class="text-3xl font-bold text-gray-900 dark:text-white">₱12</span>
-                <button
-                  class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none 
-                  focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center 
-                  dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                >Add to cart</button>
+                <span class="price">₱12</span>
+                <button class="button">Add to cart</button>
               </div>
             </div>
           </div>
 
           <!-- Product Card 3 -->
-          <div
-            class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700
-            transform transition duration-300 hover:scale-105 hover:shadow-xl cursor-pointer"
-          >
+          <div class="card">
             <a href="#">
-              <img class="p-8 rounded-t-lg transition duration-300 hover:scale-110"
-                src="./src/assets/imgs/cracklings.webp" alt="product image" />
+              <img
+                class="img-design"
+                src="./src/assets/imgs/cracklings.webp"
+                alt="product image"
+              />
             </a>
             <div class="px-5 pb-5">
-              <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white">Cracklings</h5>
+              <h5 class="item_name">Cracklings</h5>
               <div class="flex items-center justify-between mt-2">
-                <span class="text-3xl font-bold text-gray-900 dark:text-white">₱12</span>
-                <button
-                  class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none 
-                  focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center 
-                  dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                >Add to cart</button>
+                <span class="price">₱12</span>
+                <button class="button">Add to cart</button>
               </div>
             </div>
           </div>
 
           <!-- Product Card 4 -->
-          <div
-            class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700
-            transform transition duration-300 hover:scale-105 hover:shadow-xl cursor-pointer"
-          >
+          <div class="card">
             <a href="#">
-              <img class="p-8 rounded-t-lg transition duration-300 hover:scale-110"
-                src="./src/assets/imgs/mangjuan.webp" alt="product image" />
+              <img
+                class="img-design"
+                src="./src/assets/imgs/mangjuan.webp"
+                alt="product image"
+              />
             </a>
             <div class="px-5 pb-5">
-              <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white">Mang Juan</h5>
+              <h5 class="item_name">Mang Juan</h5>
               <div class="flex items-center justify-between mt-2">
-                <span class="text-3xl font-bold text-gray-900 dark:text-white">₱12</span>
-                <button
-                  class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none 
-                  focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center 
-                  dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                >Add to cart</button>
+                <span class="price">₱12</span>
+                <button class="button">Add to cart</button>
               </div>
             </div>
           </div>
 
           <!-- Product Card 5 -->
-          <div
-            class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700
-            transform transition duration-300 hover:scale-105 hover:shadow-xl cursor-pointer"
-          >
+          <div class="card">
             <a href="#">
-              <img class="p-8 rounded-t-lg transition duration-300 hover:scale-110"
-                src="./src/assets/imgs/nova1.webp" alt="product image" />
+              <img
+                class="img-design"
+                src="./src/assets/imgs/nova1.webp"
+                alt="product image"
+              />
             </a>
             <div class="px-5 pb-5">
-              <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white">Nova</h5>
+              <h5 class="item_name">Nova</h5>
               <div class="flex items-center justify-between mt-2">
-                <span class="text-3xl font-bold text-gray-900 dark:text-white">₱12</span>
-                <button
-                  class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none 
-                  focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center 
-                  dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                >Add to cart</button>
+                <span class="price">₱12</span>
+                <button class="button">Add to cart</button>
               </div>
             </div>
           </div>
 
           <!-- Product Card 6 -->
-          <div
-            class="w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700
-            transform transition duration-300 hover:scale-105 hover:shadow-xl cursor-pointer"
-          >
+          <div class="card">
             <a href="#">
-              <img class="p-8 rounded-t-lg transition duration-300 hover:scale-110"
-                src="./src/assets/imgs/oishi.webp" alt="product image" />
+              <img
+                class="img-design"
+                src="./src/assets/imgs/oishi.webp"
+                alt="product image"
+              />
             </a>
             <div class="px-5 pb-5">
-              <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white">Oishi</h5>
+              <h5 class="item_name">Oishi</h5>
               <div class="flex items-center justify-between mt-2">
-                <span class="text-3xl font-bold text-gray-900 dark:text-white">₱12</span>
-                <button
-                  class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none 
-                  focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center 
-                  dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                >Add to cart</button>
+                <span class="price">₱12</span>
+                <button class="button">Add to cart</button>
               </div>
             </div>
           </div>
-
         </article>
       </section>
 
       <!-- Cart Section -->
-      <section class="bg-white p-5 rounded-2xl shadow-sm h-fit">
+      <section class="bg-white p-5 rounded-2xl shadow-sm h-fit" id="carts">
         <article>
-          <h2 class="text-3xl font-bold text-center mt-5 text-black mb-4">Cart Items</h2>
-          <p class="text-center text-gray-700">No items yet.</p>
+          <div id="cart" >
+            <h2 class="text-3xl font-bold text-center mt-5 text-black mb-4">
+              Cart Items
+            </h2>
+          </div>
+          
         </article>
       </section>
-
     </main>
+    <script src="./process.js"></script>
   </body>
 </html>
